--- a/example.yaml
+++ b/example.yaml
@@ -6,22 +6,36 @@ plugins:
   providers:
   - name: example
     path: ../../bin
-resources:
-  exampleResource:
-    properties:
-      applies_to:
-      - production
-      - staging
-      - development
-      description: |
-        This is a multiline description
-        with multiple lines
-          and some indentation
-            and more indentation
-
-        And empty lines too!
-      evaluation_period: weekly
-      name: Example Resource
-      resource_type: external
-    type: example:Resource
+resources: {}
 runtime: yaml
+newdir: {}
+test: |
+  plugins:
+    providers:
+    - name: example
+      path: ../../bin
+test2: |
+  plugins:
+    providers:
+    - name: example
+      path: ../../bin
+test3: |
+  plugins:
+    providers:
+    - name: example
+      path: ../../bin
+test4: |
+  plugins:
+    providers:
+    - name: example
+      path: ../../bin
+test5:
+  plugins:
+    providers:
+    - name: example
+      path: ../../bin
+simple: simple string
+list:
+- item1
+- item2
+- item3
