--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,87 +51,9 @@ jobs:
         pip install flake8
         flake8 yaml-fuse.py test_yaml_fuse.py functional_tests.py --max-line-length=120 --ignore=E501,W503,W291,W293,E302,E305,F401,F841,F541,E301,E128,W292,E722
 
-  # Integration tests (with FUSE)
-  integration-tests:
-    name: Integration Tests
-    runs-on: ubuntu-latest
-    needs: unit-tests
-    
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-    
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: 3.11
-    
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-    
-    - name: Install FUSE
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y fuse
-    
-    - name: Setup FUSE permissions
-      run: |
-        sudo modprobe fuse
-        sudo chmod 666 /dev/fuse
-        # Create fuse group if it doesn't exist
-        sudo groupadd fuse || true
-        sudo chown root:fuse /dev/fuse || sudo chown root:root /dev/fuse
-        sudo usermod -a -G fuse $USER || true
-    
-    - name: Run integration tests
-      run: |
-        echo "Running integration tests..."
-        python3 test_yaml_fuse.py --integration
-      env:
-        PYTHONPATH: ${{ github.workspace }}
-
-  # Functional tests
-  functional-tests:
-    name: Functional Tests
-    runs-on: ubuntu-latest
-    needs: unit-tests
-    
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-    
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: 3.11
-    
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-    
-    - name: Install FUSE
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y fuse
-    
-    - name: Setup FUSE permissions
-      run: |
-        sudo modprobe fuse
-        sudo chmod 666 /dev/fuse
-        # Create fuse group if it doesn't exist
-        sudo groupadd fuse || true
-        sudo chown root:fuse /dev/fuse || sudo chown root:root /dev/fuse
-        sudo usermod -a -G fuse $USER || true
-    
-    - name: Run functional tests
-      run: |
-        echo "Running functional tests..."
-        python3 functional_tests.py
-      env:
-        PYTHONPATH: ${{ github.workspace }}
+  # Note: FUSE integration and functional tests are excluded from CI
+  # as they require actual filesystem mounting which is complex in CI environments.
+  # These tests are designed for local development and testing.
 
   # Security and dependency checks
   security:
