--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,16 +40,16 @@ jobs:
     
     - name: Run unit tests
       run: |
-        python3 test_yaml_fuse.py --unit
+        python3 tests.py --unit
     
     - name: Run demo
       run: |
-        python3 test_yaml_fuse.py --demo
+        python3 tests.py --demo
     
     - name: Check code style
       run: |
         pip install flake8
-        flake8 yaml-fuse.py test_yaml_fuse.py functional_tests.py --max-line-length=120 --ignore=E501,W503,W291,W293,E302,E305,F401,F841,F541,E301,E128,W292,E722
+        flake8 yaml-fuse.py tests.py --max-line-length=120 --ignore=E501,W503,W291,W293,E302,E305,F401,F841,F541,E301,E128,W292,E722
 
   # Note: FUSE integration and functional tests are excluded from CI
   # as they require actual filesystem mounting which is complex in CI environments.
